--- a/Flash Chat iOS13/Views/Base.lproj/Main.storyboard
+++ b/Flash Chat iOS13/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <viewController id="Tim-3B-f4n" customClass="WelcomeViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H86-OM-sMN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWe-nW-2HB">
@@ -84,7 +84,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RegisterViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h2S-Ae-zdW">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scg-da-zi8" userLabel="EmailView">
@@ -167,7 +167,7 @@
                     <connections>
                         <outlet property="emailTextfield" destination="u72-XV-6FN" id="Lsc-X4-fSS"/>
                         <outlet property="passwordTextfield" destination="hLb-P9-NkF" id="uaM-fo-m8M"/>
-                        <segue destination="lwd-AH-u8E" kind="show" identifier="RegisterToChat" id="CSo-QO-pQT"/>
+                        <segue destination="uL1-OS-dZI" kind="show" identifier="RegisterToTabController" id="kGz-dW-fG5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -179,7 +179,7 @@
             <objects>
                 <viewController id="5v2-hE-4Ub" customClass="LoginViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NR3-PA-yDz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mkq-A4-A98" userLabel="EmailView">
@@ -262,27 +262,46 @@
                     <connections>
                         <outlet property="emailTextfield" destination="F21-w0-z4z" id="YUG-Hl-Rxj"/>
                         <outlet property="passwordTextfield" destination="abR-gz-opL" id="xCU-X2-hrx"/>
-                        <segue destination="lwd-AH-u8E" kind="show" identifier="LoginToChat" id="8KK-hU-gAF"/>
+                        <segue destination="uL1-OS-dZI" kind="show" identifier="LoginToTabController" id="W6L-0w-AQE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XcE-Gk-YZg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1857.9710144927537" y="643.52678571428567"/>
         </scene>
+        <!--Team Tab Bar Controller-->
+        <scene sceneID="mp5-zB-M0d">
+            <objects>
+                <tabBarController storyboardIdentifier="TeamTabBarController" id="uL1-OS-dZI" customClass="TeamTabBarController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="jkw-JX-MJh"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="z3A-ks-fVo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="lwd-AH-u8E" kind="relationship" relationship="viewControllers" id="XsC-0O-HZV"/>
+                        <segue destination="rXn-ET-aYf" kind="relationship" relationship="viewControllers" id="B6j-ay-HCg"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="66V-LQ-7p5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2894" y="224"/>
+        </scene>
         <!--⚡️FlashChat-->
         <scene sceneID="yeH-Ia-3JZ">
             <objects>
-                <viewController id="lwd-AH-u8E" customClass="ChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TeamAChatView" id="lwd-AH-u8E" customClass="ChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CEy-W8-acN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S6L-hg-cne">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="665"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xlo-0G-XA6">
-                                <rect key="frame" x="0.0" y="714" width="414" height="60"/>
+                                <rect key="frame" x="0.0" y="665" width="414" height="60"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write a message..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UWj-GQ-Vph">
                                         <rect key="frame" x="20" y="20" width="314" height="40"/>
@@ -331,6 +350,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6YX-ca-E8f"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Team A" image="person.3" catalog="system" selectedImage="person.3" id="tpu-Lw-DZ5">
+                        <color key="badgeColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </tabBarItem>
                     <navigationItem key="navigationItem" title="⚡️FlashChat" id="Q5u-eL-Bgp">
                         <barButtonItem key="rightBarButtonItem" title="Log Out" id="C12-YJ-ClA">
                             <connections>
@@ -345,7 +367,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jFP-qE-CyQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2942.0289855072465" y="134.59821428571428"/>
+            <point key="canvasLocation" x="3809" y="-94"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KMs-Qa-DAZ">
@@ -371,12 +393,95 @@
             </objects>
             <point key="canvasLocation" x="-86.956521739130437" y="134.59821428571428"/>
         </scene>
+        <!--⚡️FlashChat-->
+        <scene sceneID="U8T-FS-Djv">
+            <objects>
+                <viewController storyboardIdentifier="TeamBChatView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rXn-ET-aYf" customClass="ChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="suV-BU-mt1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R3M-Zn-46B">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="665"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsb-Bx-1MG">
+                                <rect key="frame" x="0.0" y="665" width="414" height="60"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write a message..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dVH-GG-Km7">
+                                        <rect key="frame" x="20" y="20" width="314" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Bj3-ub-Xxn"/>
+                                        </constraints>
+                                        <color key="textColor" name="BrandPurple"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yqg-pN-nu3">
+                                        <rect key="frame" x="354" y="20" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="ED4-FZ-Btd"/>
+                                            <constraint firstAttribute="width" constant="40" id="d2R-W5-eCz"/>
+                                            <constraint firstAttribute="height" constant="40" id="dbX-jF-ERt"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="zhs-Lf-IRb"/>
+                                        </constraints>
+                                        <color key="tintColor" name="BrandLightPurple"/>
+                                        <state key="normal" image="paperplane.fill" catalog="system"/>
+                                        <connections>
+                                            <action selector="sendPressed:" destination="rXn-ET-aYf" eventType="touchUpInside" id="umk-Va-37V"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="BrandPurple"/>
+                                <constraints>
+                                    <constraint firstItem="dVH-GG-Km7" firstAttribute="top" secondItem="fsb-Bx-1MG" secondAttribute="top" constant="20" id="FL5-W1-aWI"/>
+                                    <constraint firstItem="dVH-GG-Km7" firstAttribute="leading" secondItem="fsb-Bx-1MG" secondAttribute="leading" constant="20" id="MC6-gG-Jhw"/>
+                                    <constraint firstItem="yqg-pN-nu3" firstAttribute="leading" secondItem="dVH-GG-Km7" secondAttribute="trailing" constant="20" id="MZH-vD-ggH"/>
+                                    <constraint firstAttribute="height" constant="60" id="PVp-ez-8xc"/>
+                                    <constraint firstAttribute="trailing" secondItem="yqg-pN-nu3" secondAttribute="trailing" constant="20" id="qbZ-HB-rbA"/>
+                                    <constraint firstItem="yqg-pN-nu3" firstAttribute="top" secondItem="fsb-Bx-1MG" secondAttribute="top" constant="20" id="sGa-1f-41K"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" name="BrandPurple"/>
+                        <constraints>
+                            <constraint firstItem="R3M-Zn-46B" firstAttribute="trailing" secondItem="CPd-eD-1JP" secondAttribute="trailing" id="0rU-ZK-SNx"/>
+                            <constraint firstItem="R3M-Zn-46B" firstAttribute="top" secondItem="CPd-eD-1JP" secondAttribute="top" id="ECv-Ho-J02"/>
+                            <constraint firstItem="fsb-Bx-1MG" firstAttribute="top" secondItem="R3M-Zn-46B" secondAttribute="bottom" id="Lo4-eu-FLB"/>
+                            <constraint firstItem="CPd-eD-1JP" firstAttribute="bottom" secondItem="fsb-Bx-1MG" secondAttribute="bottom" id="cWS-io-9lf"/>
+                            <constraint firstItem="fsb-Bx-1MG" firstAttribute="trailing" secondItem="CPd-eD-1JP" secondAttribute="trailing" id="guZ-Jh-Ts3"/>
+                            <constraint firstItem="R3M-Zn-46B" firstAttribute="leading" secondItem="CPd-eD-1JP" secondAttribute="leading" id="iOb-RL-gGD"/>
+                            <constraint firstItem="fsb-Bx-1MG" firstAttribute="leading" secondItem="CPd-eD-1JP" secondAttribute="leading" id="xuF-XU-0EU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CPd-eD-1JP"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Team B" image="person.3.fill" catalog="system" selectedImage="person.3.fill" id="UmW-hz-QU8">
+                        <color key="badgeColor" name="BrandPurple"/>
+                    </tabBarItem>
+                    <navigationItem key="navigationItem" title="⚡️FlashChat" id="F2K-nP-pOJ">
+                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="zLv-lq-Ry4">
+                            <connections>
+                                <action selector="logOutPressed:" destination="rXn-ET-aYf" id="3t9-9O-ij7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="messageTextfield" destination="dVH-GG-Km7" id="Jpa-yT-Z44"/>
+                        <outlet property="tableView" destination="R3M-Zn-46B" id="nei-kg-AzX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rsk-fV-Mfh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3825" y="565"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="8KK-hU-gAF"/>
+        <segue reference="W6L-0w-AQE"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="paperplane.fill" catalog="system" width="128" height="121"/>
+        <image name="person.3" catalog="system" width="128" height="62"/>
+        <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="textfield" width="298" height="93"/>
         <namedColor name="BrandBlue">
             <color red="0.16500000655651093" green="0.77999997138977051" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
