Add Logout /Tab Items. Modify the logic to show messages.

--- a/Flash Chat iOS13/Views/Base.lproj/Main.storyboard
+++ b/Flash Chat iOS13/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <viewController id="Tim-3B-f4n" customClass="WelcomeViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H86-OM-sMN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWe-nW-2HB">
@@ -84,7 +84,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RegisterViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h2S-Ae-zdW">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scg-da-zi8" userLabel="EmailView">
@@ -179,7 +179,7 @@
             <objects>
                 <viewController id="5v2-hE-4Ub" customClass="LoginViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NR3-PA-yDz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mkq-A4-A98" userLabel="EmailView">
@@ -273,7 +273,13 @@
         <scene sceneID="mp5-zB-M0d">
             <objects>
                 <tabBarController storyboardIdentifier="TeamTabBarController" id="uL1-OS-dZI" customClass="TeamTabBarController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="jkw-JX-MJh"/>
+                    <navigationItem key="navigationItem" id="jkw-JX-MJh">
+                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="akp-Rn-8BS">
+                            <connections>
+                                <action selector="LogOutPressed:" destination="uL1-OS-dZI" id="iyI-Nm-gRV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="z3A-ks-fVo">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -288,12 +294,12 @@
             </objects>
             <point key="canvasLocation" x="2894" y="224"/>
         </scene>
-        <!--⚡️FlashChat-->
+        <!--🏈TeamA-->
         <scene sceneID="yeH-Ia-3JZ">
             <objects>
-                <viewController storyboardIdentifier="TeamAChatView" id="lwd-AH-u8E" customClass="ChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TeamAChatView" id="lwd-AH-u8E" customClass="TeamAChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CEy-W8-acN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S6L-hg-cne">
@@ -353,11 +359,9 @@
                     <tabBarItem key="tabBarItem" title="Team A" image="person.3" catalog="system" selectedImage="person.3" id="tpu-Lw-DZ5">
                         <color key="badgeColor" cocoaTouchSystemColor="darkTextColor"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" title="⚡️FlashChat" id="Q5u-eL-Bgp">
+                    <navigationItem key="navigationItem" title="🏈TeamA" id="Q5u-eL-Bgp">
                         <barButtonItem key="rightBarButtonItem" title="Log Out" id="C12-YJ-ClA">
-                            <connections>
-                                <action selector="logOutPressed:" destination="lwd-AH-u8E" id="DZ8-pL-T6w"/>
-                            </connections>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -393,12 +397,12 @@
             </objects>
             <point key="canvasLocation" x="-86.956521739130437" y="134.59821428571428"/>
         </scene>
-        <!--⚡️FlashChat-->
+        <!--🏈TeamB-->
         <scene sceneID="U8T-FS-Djv">
             <objects>
-                <viewController storyboardIdentifier="TeamBChatView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rXn-ET-aYf" customClass="ChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TeamBChatView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rXn-ET-aYf" customClass="TeamBChatViewController" customModule="Flash_Chat_iOS13" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="suV-BU-mt1">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R3M-Zn-46B">
@@ -458,12 +462,8 @@
                     <tabBarItem key="tabBarItem" title="Team B" image="person.3.fill" catalog="system" selectedImage="person.3.fill" id="UmW-hz-QU8">
                         <color key="badgeColor" name="BrandPurple"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" title="⚡️FlashChat" id="F2K-nP-pOJ">
-                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="zLv-lq-Ry4">
-                            <connections>
-                                <action selector="logOutPressed:" destination="rXn-ET-aYf" id="3t9-9O-ij7"/>
-                            </connections>
-                        </barButtonItem>
+                    <navigationItem key="navigationItem" title="🏈TeamB" id="F2K-nP-pOJ">
+                        <barButtonItem key="rightBarButtonItem" title="Log Out" image="calendar" catalog="system" id="zLv-lq-Ry4"/>
                     </navigationItem>
                     <connections>
                         <outlet property="messageTextfield" destination="dVH-GG-Km7" id="Jpa-yT-Z44"/>
@@ -479,6 +479,7 @@
         <segue reference="W6L-0w-AQE"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="paperplane.fill" catalog="system" width="128" height="121"/>
         <image name="person.3" catalog="system" width="128" height="62"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
